--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -20,7 +20,9 @@
 			"extensions": [
 				"esbenp.prettier-vscode",
 				"vscode-icons-team.vscode-icons",
-				"wayou.vscode-todo-highlight"
+				"wayou.vscode-todo-highlight",
+				"MS-vsliveshare.vsliveshare",
+				"ritwickdey.LiveServer"
 			],
 			"settings": {
 				"editor.fontSize": 14,
